--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="app">
         <h1>Simple Quiz</h1>
+        <p id="high-score"><b>High Score:</b>  0</p>
         <div class="quiz">
             <h2 id="question">Question Goes Here</h2>
             <div id="answer-button">
